prettify the UI and choose picture

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,6 +30,9 @@
             android:name=".DescriptorActivity"
             android:label="@string/title_activity_descriptor" >
         </activity>
+        
     </application>
+    
+     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 </manifest>
